Replaced shutil copy with copy2

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 340,
    "id": "57c2915c",
    "metadata": {},
    "outputs": [
@@ -2449,7 +2449,7 @@
        "PosixPath('code/containers/training/train.py')"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2458,7 +2458,7 @@
     "import shutil\n",
     "\n",
     "(CODE_FOLDER / \"containers\" / \"training\").mkdir(parents=True, exist_ok=True)\n",
-    "shutil.copy(\n",
+    "shutil.copy2(\n",
     "    CODE_FOLDER / \"training\" / \"script.py\",\n",
     "    CODE_FOLDER / \"containers\" / \"training\" / \"train.py\",\n",
     ")"
